ecmascript/parser/tests/test262-error-references/fail/2d1410e37ecc3647.js.stderr
error: Expected {, got <eof>
 --> $DIR/tests/test262-parser/fail/2d1410e37ecc3647.js:1:23
  |
1 | function f(a, ...b = 0)
  |                       ^

error: A rest parameter cannot have an initializer
 --> $DIR/tests/test262-parser/fail/2d1410e37ecc3647.js:1:18
  |
1 | function f(a, ...b = 0)
  |                  ^

